--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,20 @@ h2 {
     margin: 5em auto;
 }
 
+.hero__image-container {
+    background-image: url("./images/image-header-mobile.jpg");
+    background-color: hsl(277, 67%, 54.5%);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: multiply;
+    filter: contrast(75%) brightness(115%);
+    border-radius: 7px 7px 0 0;
+}
+
+.hero__image {
+    visibility: hidden;
+}
+
 .hero__title,
 .social-proof__title {
     color: var(--white);
@@ -125,6 +139,10 @@ h2 {
         border-radius: 0 7px 7px 0;
     }
 
+    .hero__image-container {
+        border-radius: 0 7px 7px 0;
+    }
+
     .container {
         width: 80%;
         max-width: 1300px;
@@ -165,7 +183,7 @@ h2 {
     }
 }
 
-@media (min-width: 1335px) {
+@media (min-width: 1355px) {
     .hero__title {
         font-size: 2.1rem;
     }
